--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.activities.LoginActivity" />
+        <activity android:name=".view.activities.AtividadesActivity" />
+        <activity android:name=".view.activities.CadastroActivity" />
         <activity
             android:name=".view.activities.NavigationActivity"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".view.activities.AtividadesActivity" />
-        <activity android:name=".view.activities.CadastroActivity" />
-        <activity android:name=".view.activities.LoginActivity">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
