--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view.activities.LoginActivity" />
-        <activity android:name=".view.activities.AtividadesActivity" />
+        <activity android:name=".view.activities.NavigationActivity" />
         <activity android:name=".view.activities.CadastroActivity" />
         <activity
-            android:name=".view.activities.NavigationActivity"
-            android:label="@string/title_activity_navigation"
+            android:name=".view.activities.AtividadesActivity"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
