--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,10 @@ dependencies {
 
 
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
     implementation 'com.github.clans:fab:1.6.4'
+
+    implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
 
 
 }
