--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activities.AtividadesActivity" />
+        <activity android:name=".view.activities.LoginActivity" />
         <activity android:name=".view.activities.NavigationActivity" />
         <activity android:name=".view.activities.CadastroActivity" />
         <activity
-            android:name=".view.activities.LoginActivity"
+            android:name=".view.activities.AtividadesActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
