--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.activities.FazendaActivity"></activity>
         <activity android:name=".view.activities.AtividadesActivity" />
         <activity android:name=".view.activities.NavigationActivity" />
         <activity android:name=".view.activities.CadastroActivity" />
